runit 1.2.0
Sun, 12 Dec 2004 20:17:29 +0000
  * doc/upgrade.html: typo.
  * runsv.c: support custom control commands through control/ directory,
    optionally switch off sending signal.
  * man/runsv.8: document custom control commands.
  * runsv.check, runsv.dist: check custom control commands.

runit 1.1.0
Sat, 06 Nov 2004 17:21:11 +0000
  * svlogd.c: new config option t timeout (thx Enrico Scholz); config
    options e and E select and deselect lines for stderr respectively (thx
    Vladimir Smelhaus); new config option N.
  * man/svlogd.8: adapt.
  * runsv.c: on commands down and exit send CONT after TERM.
  * man/runsv.8: adapt.
  * etc/2: use -P option to runsvdir.
  * src/svlogd.check: add check for t config option.
  * chpst.c: new option -n: adjust nice level.
  * man/chpst.8: adapt.

runit 1.0.5
Tue, 21 Sep 2004 18:18:14 +0000
  * svlogd.c: fix line buffer handling for pattern matching (thx Enrico
    Scholz); properly retry writing to current on error; minor.
  * doc/index.html: wording; add link to useinit.html; remove link to runit
    on linuxfromscratch.
  * doc/runscripts.html: add hint, some getties need to be run in a new
    session/process group (thx Dan Melomedman).
  * man/svlogd.8: minor fixes.
  * man/svwaitdown.8: remove hint about -x option.
  * package/check, package/compile, package/install, package/install-man,
    package/upgrade: use set -e instead of #!/bin/sh -e.
  * runsvdir.c: new option -P, run each runsv process in a new session and
    process group (thx Charlie Brady).
  * man/runsvdir.8: adapt; typo.

runit 1.0.4
Sun, 01 Aug 2004 18:29:36 +0000
  * doc/runlevels.html, doc/upgrade.html, doc/useinit.html, man/runsvdir.8,
    man/runsvchdir.8: minor changes in wording, notations.
  * runsvdir.c: check services dir again after one second until it's
    unchanged (thx Eric Lammerts); sleep one second before scanning if
    services dir mtime is now; loop while chdir to starting dir fails;